# security-vision-backend-py

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
aiosqlite/: __init__.py
alembic/: env.py
alembic/versions/: 20250314120000_create_presence_sessions_view.py  20250315120000_create_presence_daily_usage.py  20250320120000_create_presence_transitions_view.py  20250322120000_add_camera_stream_fields.py  20250323120000_add_locations_tables.py  20250324120000_add_person_phone_user_type.py  20250325120000_add_device_location_id.py  20250326120000_add_device_users_table.py  38c2c8e3f69c_add_users.py  567585856ab6_add_tenant_and_sla_fields_to_incidents.py  67583856d231_add_role_to_users.py  78ce0c2e61a9_add_incidents_table.py  80e453e2a75a_add_incident_messages_table.py  99eaed046d00_add_media_fields_to_incident_messages.py  c3b2014900bd_create_presence_sessions_view.py
app/: .env  __init__.py  main.py
app/api/: deps.py
app/core/: config.py  security.py
app/crud/: __init__.py  (+24 more)
docker/: entrypoint.sh  minio-init.sh  wait_for_db.py
env/: .env.dev  .env.prod
scripts/: rollup_presence_logs.py  simulate_gateways.py  test_create_camera.py
testes/: test_alert_rules_api.py  test_buildings.py  test_floors_floorplans.py  test_mqtt_gateway_autoregister.py  test_mqtt_ingestor_logic.py  test_people_tags.py  test_person_current_location.py  test_person_groups_api.py  test_position_by_device.py  test_positions_current_api.py  test_webhooks_api.py
(+106 files in other folders)
