[tool.poetry]
name = "rtls-backend"
version = "0.1.0"
description = "RTLS BLE Backend (Minew G1-E + C10) via MQTT"
authors = ["Seu Nome <voce@exemplo.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.34"
asyncpg = "^0.29.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
